--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "methods": "0.0.1",
     "cookiejar": "1.3.0",
     "debug": "~0.7.2",
-    "reduce-component": "1.0.1"
+    "reduce-component": "1.0.1",
+    "phantomjs": "1.9.7-1"
   },
   "devDependencies": {
-    "zuul": "~1.3.0",
+    "zuul": "1.5.4",
     "express": "3.3.1",
     "better-assert": "~0.1.0",
     "should": "1.3.0",
