--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "express": "3.3.1",
     "better-assert": "~0.1.0",
     "should": "1.3.0",
-    "mocha": "*"
+    "mocha": "*",
+    "component": "~0.19.5"
   },
   "browser": {
     "./lib/node/index.js": "./lib/client.js",
